# AI-Engg

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
101/: gemini.py  openai-sdk.py
Agents/: 00_react_agent.py  01_agent.py
Fine-tuning/: huggingfacedemo.ipynb
LangGraph/: 01_joke_simulator.py  03_batsman.py  04_prompt_chaining.ipynb  06_review_handler.ipynb  07_X_post_generator.ipynb
LangGraph/01_Basics/: 00_graph_without_LLM.py  04_prompt_chaining_extra.ipynb  05_essay_evaluator.ipynb  Readme.md
LangGraph/chatbot/: chatbot_history.db  chatbot_history.db-shm  chatbot_history.db-wal  langgraph_backend.py  langgraph_backend_async.py  langgraph_backend_database.py  langgraph_backend_database_v2.py  langgraph_backend_tools.py  pyproject.toml  streamlit_frontend_database.py  streamlit_frontend_database_v2.py  streamlit_frontend_threading.py  streamlit_frontend_tools.py
LangSmith/: 2_sequential_chain.py  3_rag_v1.py  3_rag_v2.py  3_rag_v3.py  3_rag_v4.py  5_langgraph_v2.py  README.md  main.py  pyproject.toml  requirements.txt
MCP/00_MCP_FS_Client/: Readme.md  mcp-fs.py
MCP/01_MCP_Server/: 01_mcp_server.py  02_mcp_client.py  Readme.md
Old-school-requests/: openai-req.py
RAG/: product_recommendation.py  products.txt
Tool-calling/: ddg_tool.py
Tool-calling/custom_tools/: datetime_tool-V0.py  datetime_tool-V1.py  multi_tool.py
langchain-demo/: Multi-turn_chatbot_memory.py  lc-without-memory.py  lc.py
