[project]
name = "ai-engg-notes"
version = "0.1.0"
description = "AI engg course Notes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.10.0",
    "faiss-cpu>=1.14.2",
    "fastmcp>=2.14.2",
    "google-genai>=1.51.0",
    "huggingface-hub>=1.8.0",
    "langchain>=1.2.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "openai>=2.8.1",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.57.0",
    "watchdog>=6.0.0",
]

[tool.uv.workspace]
members = [
    "LangGraph/chatbot",
    "LangSmith",
]
