[project]
name = "langsmith-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.14.2",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.6",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "langsmith>=0.7.22",
    "pydantic>=2.12.5",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
]
